# SnowSimulation

./: CMakeLists.txt  README.md  main.cpp
include/: collision.h  compute_force.h  grid.h  particle_precompute.h  particles.h  particles_to_grid.h  update_velocity.h
src/: collision.cpp  compute_force.cpp  grid.cpp  particle_precompute.cpp  particles.cpp  particles_to_grid.cpp  update_velocity.cpp
